Filter consumer groups by namespace ownership