@@ -21,7 +21,6 @@ package com.michelin.ns4kafka.service;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -59,6 +58,12 @@ class ConsumerGroupServiceTest {
     @Mock
     AclService aclService;
 
+    @Mock
+    TopicService topicService;
+
+    @Mock
+    ConsumerGroupAsyncExecutor consumerGroupAsyncExecutor;
+
     @InjectMocks
     ConsumerGroupService consumerGroupService;
 
@@ -71,54 +76,44 @@ class ConsumerGroupServiceTest {
                         .build())
                 .build();
 
-        List<AccessControlEntry> acls = List.of(AccessControlEntry.builder()
-                .spec(AccessControlEntry.AccessControlEntrySpec.builder()
-                        .resourceType(AccessControlEntry.ResourceType.GROUP)
-                        .resourcePatternType(AccessControlEntry.ResourcePatternType.PREFIXED)
-                        .permission(AccessControlEntry.Permission.OWNER)
-                        .grantedTo("namespace")
-                        .resource("namespace-")
-                        .build())
-                .build());
-
         ConsumerGroupDescription stableDescription =
                 new ConsumerGroupDescription(null, true, null, null, null, GroupState.STABLE, null, null, null, null);
 
-        ConsumerGroupAsyncExecutor consumerGroupAsyncExecutor = mock(ConsumerGroupAsyncExecutor.class);
+        TopicPartition partition = new TopicPartition("namespace-topic", 0);
+
         when(applicationContext.getBean(
                         ConsumerGroupAsyncExecutor.class,
                         Qualifiers.byName(namespace.getMetadata().getCluster())))
                 .thenReturn(consumerGroupAsyncExecutor);
-        when(consumerGroupAsyncExecutor.listConsumerGroupIds())
-                .thenReturn(List.of("other-group", "namespace-group2", "namespace-group1"));
-        when(aclService.findResourceOwnerGrantedToNamespace(namespace, AccessControlEntry.ResourceType.GROUP))
-                .thenReturn(acls);
-        when(aclService.isResourceCoveredByAcls(acls, "other-group")).thenReturn(false);
-        when(aclService.isResourceCoveredByAcls(acls, "namespace-group2")).thenReturn(true);
-        when(aclService.isResourceCoveredByAcls(acls, "namespace-group1")).thenReturn(true);
-        when(consumerGroupAsyncExecutor.describeConsumerGroups(List.of("namespace-group1", "namespace-group2")))
-                .thenReturn(Map.of("namespace-group1", stableDescription));
+        when(consumerGroupAsyncExecutor.listConsumerGroupIds()).thenReturn(List.of("abc.group1", "def.group2"));
+        when(aclService.isNamespaceOwnerOfResource("namespace", AccessControlEntry.ResourceType.GROUP, "abc.group1"))
+                .thenReturn(true);
+        when(aclService.isNamespaceOwnerOfResource("namespace", AccessControlEntry.ResourceType.GROUP, "def.group2"))
+                .thenReturn(false);
+        when(consumerGroupAsyncExecutor.describeConsumerGroups(List.of("abc.group1")))
+                .thenReturn(Map.of("abc.group1", stableDescription));
+        when(consumerGroupAsyncExecutor.getCommittedOffsets("abc.group1")).thenReturn(Map.of(partition, 5L));
 
         List<ConsumerGroup> result = consumerGroupService.findByWildcardName(namespace, "*");
 
-        assertEquals(2, result.size());
+        assertEquals(1, result.size());
 
-        ConsumerGroup firstGroup = result.get(0);
-        assertEquals("namespace-group1", firstGroup.getMetadata().getName());
+        ConsumerGroup firstGroup = result.getFirst();
+        assertEquals("abc.group1", firstGroup.getMetadata().getName());
         assertEquals("namespace", firstGroup.getMetadata().getNamespace());
         assertEquals("test", firstGroup.getMetadata().getCluster());
         assertEquals(GroupState.STABLE, firstGroup.getStatus().getState());
-        assertTrue(firstGroup.getStatus().getOffsets().isEmpty());
+        assertEquals(1, firstGroup.getStatus().getOffsets().size());
 
-        ConsumerGroup secondGroup = result.get(1);
-        assertEquals("namespace-group2", secondGroup.getMetadata().getName());
-        assertEquals(GroupState.UNKNOWN, secondGroup.getStatus().getState());
-        assertTrue(secondGroup.getStatus().getOffsets().isEmpty());
-        verify(consumerGroupAsyncExecutor, never()).getCommittedOffsets(anyString());
+        ConsumerGroup.ConsumerGroupOffset offset =
+                firstGroup.getStatus().getOffsets().getFirst();
+        assertEquals("namespace-topic", offset.getTopic());
+        assertEquals(0, offset.getPartition());
+        assertEquals(5L, offset.getCurrentOffset());
     }
 
     @Test
-    void shouldListConsumerGroupsOwnedByNamespaceWithOffsets() throws InterruptedException, ExecutionException {
+    void shouldListConsumerGroupsOwnedByNamespaceWithoutOffsets() throws InterruptedException, ExecutionException {
         Namespace namespace = Namespace.builder()
                 .metadata(Resource.Metadata.builder()
                         .name("namespace")
@@ -126,50 +121,37 @@ class ConsumerGroupServiceTest {
                         .build())
                 .build();
 
-        List<AccessControlEntry> acls = List.of(AccessControlEntry.builder()
-                .spec(AccessControlEntry.AccessControlEntrySpec.builder()
-                        .resourceType(AccessControlEntry.ResourceType.GROUP)
-                        .resourcePatternType(AccessControlEntry.ResourcePatternType.PREFIXED)
-                        .permission(AccessControlEntry.Permission.OWNER)
-                        .grantedTo("namespace")
-                        .resource("namespace-")
-                        .build())
-                .build());
-
         ConsumerGroupDescription stableDescription =
                 new ConsumerGroupDescription(null, true, null, null, null, GroupState.STABLE, null, null, null, null);
 
-        TopicPartition firstPartition = new TopicPartition("topic1", 0);
-        TopicPartition secondPartition = new TopicPartition("topic1", 1);
-        TopicPartition thirdPartition = new TopicPartition("topic2", 0);
-
-        ConsumerGroupAsyncExecutor consumerGroupAsyncExecutor = mock(ConsumerGroupAsyncExecutor.class);
         when(applicationContext.getBean(
                         ConsumerGroupAsyncExecutor.class,
                         Qualifiers.byName(namespace.getMetadata().getCluster())))
                 .thenReturn(consumerGroupAsyncExecutor);
-        when(consumerGroupAsyncExecutor.listConsumerGroupIds()).thenReturn(List.of("namespace-group1"));
-        when(aclService.findResourceOwnerGrantedToNamespace(namespace, AccessControlEntry.ResourceType.GROUP))
-                .thenReturn(acls);
-        when(aclService.isResourceCoveredByAcls(acls, "namespace-group1")).thenReturn(true);
-        when(consumerGroupAsyncExecutor.describeConsumerGroups(List.of("namespace-group1")))
-                .thenReturn(Map.of("namespace-group1", stableDescription));
-        when(consumerGroupAsyncExecutor.getCommittedOffsets("namespace-group1"))
-                .thenReturn(Map.of(thirdPartition, 2L, secondPartition, 7L, firstPartition, 5L));
+        when(consumerGroupAsyncExecutor.listConsumerGroupIds()).thenReturn(List.of("abc.group1", "abc.group2"));
+        when(aclService.isNamespaceOwnerOfResource("namespace", AccessControlEntry.ResourceType.GROUP, "abc.group1"))
+                .thenReturn(true);
+        when(aclService.isNamespaceOwnerOfResource("namespace", AccessControlEntry.ResourceType.GROUP, "abc.group2"))
+                .thenReturn(true);
+        when(consumerGroupAsyncExecutor.describeConsumerGroups(List.of("abc.group1", "abc.group2")))
+                .thenReturn(Map.of("abc.group1", stableDescription));
 
         List<ConsumerGroup> result = consumerGroupService.findByWildcardName(namespace, "*");
 
-        assertEquals(1, result.size());
-        assertEquals(3, result.getFirst().getStatus().getOffsets().size());
-        assertEquals("topic1", result.getFirst().getStatus().getOffsets().get(0).getTopic());
-        assertEquals(0, result.getFirst().getStatus().getOffsets().get(0).getPartition());
-        assertEquals(5L, result.getFirst().getStatus().getOffsets().get(0).getCurrentOffset());
-        assertEquals("topic1", result.getFirst().getStatus().getOffsets().get(1).getTopic());
-        assertEquals(1, result.getFirst().getStatus().getOffsets().get(1).getPartition());
-        assertEquals(7L, result.getFirst().getStatus().getOffsets().get(1).getCurrentOffset());
-        assertEquals("topic2", result.getFirst().getStatus().getOffsets().get(2).getTopic());
-        assertEquals(0, result.getFirst().getStatus().getOffsets().get(2).getPartition());
-        assertEquals(2L, result.getFirst().getStatus().getOffsets().get(2).getCurrentOffset());
+        assertEquals(2, result.size());
+
+        ConsumerGroup firstGroup = result.getFirst();
+        assertEquals("abc.group1", firstGroup.getMetadata().getName());
+        assertEquals("namespace", firstGroup.getMetadata().getNamespace());
+        assertEquals("test", firstGroup.getMetadata().getCluster());
+        assertEquals(GroupState.STABLE, firstGroup.getStatus().getState());
+        assertTrue(firstGroup.getStatus().getOffsets().isEmpty());
+
+        ConsumerGroup secondGroup = result.get(1);
+        assertEquals("abc.group2", secondGroup.getMetadata().getName());
+        assertEquals(GroupState.UNKNOWN, secondGroup.getStatus().getState());
+        assertTrue(secondGroup.getStatus().getOffsets().isEmpty());
+        verify(consumerGroupAsyncExecutor, never()).getCommittedOffsets(anyString());
     }
 
     @Test
@@ -181,35 +163,25 @@ class ConsumerGroupServiceTest {
                         .build())
                 .build();
 
-        List<AccessControlEntry> acls = List.of(AccessControlEntry.builder()
-                .spec(AccessControlEntry.AccessControlEntrySpec.builder()
-                        .resourceType(AccessControlEntry.ResourceType.GROUP)
-                        .resourcePatternType(AccessControlEntry.ResourcePatternType.PREFIXED)
-                        .permission(AccessControlEntry.Permission.OWNER)
-                        .grantedTo("namespace")
-                        .resource("namespace-")
-                        .build())
-                .build());
-
-        ConsumerGroupAsyncExecutor consumerGroupAsyncExecutor = mock(ConsumerGroupAsyncExecutor.class);
         when(applicationContext.getBean(
                         ConsumerGroupAsyncExecutor.class,
                         Qualifiers.byName(namespace.getMetadata().getCluster())))
                 .thenReturn(consumerGroupAsyncExecutor);
         when(consumerGroupAsyncExecutor.listConsumerGroupIds())
-                .thenReturn(List.of("namespace-group2", "namespace-group1", "other-group"));
-        when(aclService.findResourceOwnerGrantedToNamespace(namespace, AccessControlEntry.ResourceType.GROUP))
-                .thenReturn(acls);
-        when(aclService.isResourceCoveredByAcls(acls, "namespace-group2")).thenReturn(true);
-        when(consumerGroupAsyncExecutor.describeConsumerGroups(List.of("namespace-group2")))
+                .thenReturn(List.of("abc.group1", "abc.group2", "def.other-group"));
+        when(aclService.isNamespaceOwnerOfResource("namespace", AccessControlEntry.ResourceType.GROUP, "abc.group1"))
+                .thenReturn(true);
+        when(aclService.isNamespaceOwnerOfResource("namespace", AccessControlEntry.ResourceType.GROUP, "abc.group2"))
+                .thenReturn(true);
+        when(consumerGroupAsyncExecutor.describeConsumerGroups(List.of("abc.group2")))
                 .thenReturn(Map.of());
-        when(consumerGroupAsyncExecutor.getCommittedOffsets("namespace-group2"))
+        when(consumerGroupAsyncExecutor.getCommittedOffsets("abc.group2"))
                 .thenReturn(Map.of(new TopicPartition("topic2", 0), 3L));
 
         List<ConsumerGroup> result = consumerGroupService.findByWildcardName(namespace, "*group2");
 
         assertEquals(1, result.size());
-        assertEquals("namespace-group2", result.getFirst().getMetadata().getName());
+        assertEquals("abc.group2", result.getFirst().getMetadata().getName());
         assertEquals(1, result.getFirst().getStatus().getOffsets().size());
     }
 
@@ -222,32 +194,19 @@ class ConsumerGroupServiceTest {
                         .build())
                 .build();
 
-        List<AccessControlEntry> acls = List.of(AccessControlEntry.builder()
-                .spec(AccessControlEntry.AccessControlEntrySpec.builder()
-                        .resourceType(AccessControlEntry.ResourceType.GROUP)
-                        .resourcePatternType(AccessControlEntry.ResourcePatternType.PREFIXED)
-                        .permission(AccessControlEntry.Permission.OWNER)
-                        .grantedTo("namespace")
-                        .resource("namespace-")
-                        .build())
-                .build());
-
-        ConsumerGroupAsyncExecutor consumerGroupAsyncExecutor = mock(ConsumerGroupAsyncExecutor.class);
         when(applicationContext.getBean(
                         ConsumerGroupAsyncExecutor.class,
                         Qualifiers.byName(namespace.getMetadata().getCluster())))
                 .thenReturn(consumerGroupAsyncExecutor);
-        when(consumerGroupAsyncExecutor.listConsumerGroupIds()).thenReturn(List.of("other-group"));
-        when(aclService.findResourceOwnerGrantedToNamespace(namespace, AccessControlEntry.ResourceType.GROUP))
-                .thenReturn(acls);
-        when(aclService.isResourceCoveredByAcls(acls, "other-group")).thenReturn(false);
+        when(consumerGroupAsyncExecutor.listConsumerGroupIds()).thenReturn(List.of("abc.group1"));
+        when(aclService.isNamespaceOwnerOfResource("namespace", AccessControlEntry.ResourceType.GROUP, "abc.group1"))
+                .thenReturn(false);
 
         assertEquals(List.of(), consumerGroupService.findByWildcardName(namespace, "*"));
     }
 
     @Test
-    void shouldListExternalConsumerGroupsConsumingNamespaceOwnedTopics()
-            throws InterruptedException, ExecutionException {
+    void shouldListExternalConsumerGroups() throws InterruptedException, ExecutionException {
         Namespace namespace = Namespace.builder()
                 .metadata(Resource.Metadata.builder()
                         .name("namespace")
@@ -255,137 +214,45 @@ class ConsumerGroupServiceTest {
                         .build())
                 .build();
 
-        List<AccessControlEntry> groupOwnerAcls = List.of(AccessControlEntry.builder()
-                .spec(AccessControlEntry.AccessControlEntrySpec.builder()
-                        .resourceType(AccessControlEntry.ResourceType.GROUP)
-                        .resourcePatternType(AccessControlEntry.ResourcePatternType.PREFIXED)
-                        .permission(AccessControlEntry.Permission.OWNER)
-                        .grantedTo("namespace")
-                        .resource("namespace-")
-                        .build())
-                .build());
-        List<AccessControlEntry> topicOwnerAcls = List.of(AccessControlEntry.builder()
-                .spec(AccessControlEntry.AccessControlEntrySpec.builder()
-                        .resourceType(AccessControlEntry.ResourceType.TOPIC)
-                        .resourcePatternType(AccessControlEntry.ResourcePatternType.PREFIXED)
-                        .permission(AccessControlEntry.Permission.OWNER)
-                        .grantedTo("namespace")
-                        .resource("namespace-")
-                        .build())
-                .build());
-
         ConsumerGroupDescription stableDescription =
                 new ConsumerGroupDescription(null, true, null, null, null, GroupState.STABLE, null, null, null, null);
 
-        TopicPartition ownedPartition = new TopicPartition("namespace-topic", 0);
-        TopicPartition foreignPartition = new TopicPartition("other-topic", 0);
+        TopicPartition ownedPartition = new TopicPartition("abc.namespace-topic", 0);
+        TopicPartition ownedGroupForeignPartition = new TopicPartition("ghi.other-topic", 0);
+        TopicPartition foreignPartition = new TopicPartition("def.other-topic", 0);
 
-        ConsumerGroupAsyncExecutor consumerGroupAsyncExecutor = mock(ConsumerGroupAsyncExecutor.class);
         when(applicationContext.getBean(
                         ConsumerGroupAsyncExecutor.class,
                         Qualifiers.byName(namespace.getMetadata().getCluster())))
                 .thenReturn(consumerGroupAsyncExecutor);
         when(consumerGroupAsyncExecutor.listConsumerGroupIds())
-                .thenReturn(List.of("consumer-on-owned-topic", "consumer-on-other-topic", "namespace-owned-group"));
-        when(aclService.findResourceOwnerGrantedToNamespace(namespace, AccessControlEntry.ResourceType.GROUP))
-                .thenReturn(groupOwnerAcls);
-        when(aclService.findResourceOwnerGrantedToNamespace(namespace, AccessControlEntry.ResourceType.TOPIC))
-                .thenReturn(topicOwnerAcls);
-        when(aclService.isResourceCoveredByAcls(groupOwnerAcls, "consumer-on-owned-topic"))
+                .thenReturn(List.of("abc.group1", "def.group1", "def.group2"));
+        when(aclService.isNamespaceOwnerOfResource("namespace", AccessControlEntry.ResourceType.GROUP, "def.group1"))
                 .thenReturn(false);
-        when(aclService.isResourceCoveredByAcls(groupOwnerAcls, "consumer-on-other-topic"))
+        when(aclService.isNamespaceOwnerOfResource("namespace", AccessControlEntry.ResourceType.GROUP, "def.group2"))
                 .thenReturn(false);
-        when(aclService.isResourceCoveredByAcls(groupOwnerAcls, "namespace-owned-group"))
+        when(aclService.isNamespaceOwnerOfResource("namespace", AccessControlEntry.ResourceType.GROUP, "abc.group1"))
                 .thenReturn(true);
-        when(consumerGroupAsyncExecutor.getCommittedOffsets("consumer-on-owned-topic"))
-                .thenReturn(Map.of(ownedPartition, 5L));
-        when(consumerGroupAsyncExecutor.getCommittedOffsets("consumer-on-other-topic"))
-                .thenReturn(Map.of(foreignPartition, 7L));
-        when(aclService.isResourceCoveredByAcls(topicOwnerAcls, "namespace-topic"))
+        when(consumerGroupAsyncExecutor.getCommittedOffsets("def.group1"))
+                .thenReturn(Map.of(ownedPartition, 5L, ownedGroupForeignPartition, 9L));
+        when(consumerGroupAsyncExecutor.getCommittedOffsets("def.group2")).thenReturn(Map.of(foreignPartition, 7L));
+        when(topicService.isNamespaceOwnerOfTopic("namespace", "abc.namespace-topic"))
                 .thenReturn(true);
-        when(aclService.isResourceCoveredByAcls(topicOwnerAcls, "other-topic")).thenReturn(false);
-        when(consumerGroupAsyncExecutor.describeConsumerGroups(List.of("consumer-on-owned-topic")))
-                .thenReturn(Map.of("consumer-on-owned-topic", stableDescription));
+        when(topicService.isNamespaceOwnerOfTopic("namespace", "ghi.other-topic"))
+                .thenReturn(false);
+        when(topicService.isNamespaceOwnerOfTopic("namespace", "def.other-topic"))
+                .thenReturn(false);
+        when(consumerGroupAsyncExecutor.describeConsumerGroups(List.of("def.group1")))
+                .thenReturn(Map.of("def.group1", stableDescription));
 
         List<ConsumerGroup> result = consumerGroupService.findExternalByWildcardName(namespace, "*");
 
         assertEquals(1, result.size());
-        assertEquals("consumer-on-owned-topic", result.getFirst().getMetadata().getName());
+        assertEquals("def.group1", result.getFirst().getMetadata().getName());
         assertEquals(1, result.getFirst().getStatus().getOffsets().size());
         assertEquals(
-                "namespace-topic",
+                "abc.namespace-topic",
                 result.getFirst().getStatus().getOffsets().getFirst().getTopic());
-    }
-
-    @Test
-    void shouldIncludeTopicsForMultipleExternalConsumerGroups() throws InterruptedException, ExecutionException {
-        Namespace namespace = Namespace.builder()
-                .metadata(Resource.Metadata.builder()
-                        .name("namespace")
-                        .cluster("test")
-                        .build())
-                .build();
-
-        List<AccessControlEntry> groupOwnerAcls = List.of(AccessControlEntry.builder()
-                .spec(AccessControlEntry.AccessControlEntrySpec.builder()
-                        .resourceType(AccessControlEntry.ResourceType.GROUP)
-                        .resourcePatternType(AccessControlEntry.ResourcePatternType.PREFIXED)
-                        .permission(AccessControlEntry.Permission.OWNER)
-                        .grantedTo("namespace")
-                        .resource("namespace-")
-                        .build())
-                .build());
-        List<AccessControlEntry> topicOwnerAcls = List.of(AccessControlEntry.builder()
-                .spec(AccessControlEntry.AccessControlEntrySpec.builder()
-                        .resourceType(AccessControlEntry.ResourceType.TOPIC)
-                        .resourcePatternType(AccessControlEntry.ResourcePatternType.PREFIXED)
-                        .permission(AccessControlEntry.Permission.OWNER)
-                        .grantedTo("namespace")
-                        .resource("namespace-")
-                        .build())
-                .build());
-
-        ConsumerGroupDescription stableDescription =
-                new ConsumerGroupDescription(null, true, null, null, null, GroupState.STABLE, null, null, null, null);
-
-        TopicPartition firstOwnedPartition = new TopicPartition("namespace-topic", 0);
-        TopicPartition secondOwnedPartition = new TopicPartition("namespace-topic-2", 1);
-
-        ConsumerGroupAsyncExecutor consumerGroupAsyncExecutor = mock(ConsumerGroupAsyncExecutor.class);
-        when(applicationContext.getBean(
-                        ConsumerGroupAsyncExecutor.class,
-                        Qualifiers.byName(namespace.getMetadata().getCluster())))
-                .thenReturn(consumerGroupAsyncExecutor);
-        when(consumerGroupAsyncExecutor.listConsumerGroupIds())
-                .thenReturn(List.of("external-group-1", "external-group-2"));
-        when(aclService.findResourceOwnerGrantedToNamespace(namespace, AccessControlEntry.ResourceType.GROUP))
-                .thenReturn(groupOwnerAcls);
-        when(aclService.findResourceOwnerGrantedToNamespace(namespace, AccessControlEntry.ResourceType.TOPIC))
-                .thenReturn(topicOwnerAcls);
-        when(aclService.isResourceCoveredByAcls(groupOwnerAcls, "external-group-1"))
-                .thenReturn(false);
-        when(aclService.isResourceCoveredByAcls(groupOwnerAcls, "external-group-2"))
-                .thenReturn(false);
-        when(consumerGroupAsyncExecutor.getCommittedOffsets("external-group-1"))
-                .thenReturn(Map.of(firstOwnedPartition, 5L));
-        when(consumerGroupAsyncExecutor.getCommittedOffsets("external-group-2"))
-                .thenReturn(Map.of(secondOwnedPartition, 7L));
-        when(aclService.isResourceCoveredByAcls(topicOwnerAcls, "namespace-topic"))
-                .thenReturn(true);
-        when(aclService.isResourceCoveredByAcls(topicOwnerAcls, "namespace-topic-2"))
-                .thenReturn(true);
-        when(consumerGroupAsyncExecutor.describeConsumerGroups(List.of("external-group-1", "external-group-2")))
-                .thenReturn(Map.of("external-group-1", stableDescription, "external-group-2", stableDescription));
-
-        List<ConsumerGroup> result = consumerGroupService.findExternalByWildcardName(namespace, "*");
-
-        assertEquals(2, result.size());
-        assertEquals(
-                "namespace-topic",
-                result.get(0).getStatus().getOffsets().getFirst().getTopic());
-        assertEquals(
-                "namespace-topic-2",
-                result.get(1).getStatus().getOffsets().getFirst().getTopic());
     }
 
     @Test
@@ -398,26 +265,14 @@ class ConsumerGroupServiceTest {
                         .build())
                 .build();
 
-        List<AccessControlEntry> topicOwnerAcls = List.of(AccessControlEntry.builder()
-                .spec(AccessControlEntry.AccessControlEntrySpec.builder()
-                        .resourceType(AccessControlEntry.ResourceType.TOPIC)
-                        .resourcePatternType(AccessControlEntry.ResourcePatternType.PREFIXED)
-                        .permission(AccessControlEntry.Permission.OWNER)
-                        .grantedTo("namespace")
-                        .resource("namespace-")
-                        .build())
-                .build());
-        ConsumerGroupAsyncExecutor consumerGroupAsyncExecutor = mock(ConsumerGroupAsyncExecutor.class);
         when(applicationContext.getBean(
                         ConsumerGroupAsyncExecutor.class,
                         Qualifiers.byName(namespace.getMetadata().getCluster())))
                 .thenReturn(consumerGroupAsyncExecutor);
-        when(consumerGroupAsyncExecutor.listConsumerGroupIds()).thenReturn(List.of("namespace-group1"));
-        when(aclService.findResourceOwnerGrantedToNamespace(namespace, AccessControlEntry.ResourceType.GROUP))
-                .thenReturn(List.of());
-        when(aclService.findResourceOwnerGrantedToNamespace(namespace, AccessControlEntry.ResourceType.TOPIC))
-                .thenReturn(topicOwnerAcls);
-        when(consumerGroupAsyncExecutor.getCommittedOffsets("namespace-group1"))
+        when(consumerGroupAsyncExecutor.listConsumerGroupIds()).thenReturn(List.of("abc.group1"));
+        when(aclService.isNamespaceOwnerOfResource("namespace", AccessControlEntry.ResourceType.GROUP, "abc.group1"))
+                .thenReturn(false);
+        when(consumerGroupAsyncExecutor.getCommittedOffsets("abc.group1"))
                 .thenThrow(new ExecutionException(new RuntimeException("boom")));
 
         List<ConsumerGroup> result = consumerGroupService.findExternalByWildcardName(namespace, "*");
@@ -622,7 +477,6 @@ class ConsumerGroupServiceTest {
         TopicPartition topicPartition2 = new TopicPartition("topic1", 1);
         TopicPartition topicPartition3 = new TopicPartition("topic2", 0);
 
-        ConsumerGroupAsyncExecutor consumerGroupAsyncExecutor = mock(ConsumerGroupAsyncExecutor.class);
         when(applicationContext.getBean(
                         ConsumerGroupAsyncExecutor.class,
                         Qualifiers.byName(namespace.getMetadata().getCluster())))
@@ -651,7 +505,6 @@ class ConsumerGroupServiceTest {
         TopicPartition topicPartition1 = new TopicPartition("topic1", 0);
         TopicPartition topicPartition2 = new TopicPartition("topic1", 1);
 
-        ConsumerGroupAsyncExecutor consumerGroupAsyncExecutor = mock(ConsumerGroupAsyncExecutor.class);
         when(applicationContext.getBean(
                         ConsumerGroupAsyncExecutor.class,
                         Qualifiers.byName(namespace.getMetadata().getCluster())))
@@ -692,7 +545,6 @@ class ConsumerGroupServiceTest {
         TopicPartition topicPartition2 = new TopicPartition("topic1", 1);
         List<TopicPartition> partitionsToReset = List.of(topicPartition1, topicPartition2);
 
-        ConsumerGroupAsyncExecutor consumerGroupAsyncExecutor = mock(ConsumerGroupAsyncExecutor.class);
         when(applicationContext.getBean(
                         ConsumerGroupAsyncExecutor.class,
                         Qualifiers.byName(namespace.getMetadata().getCluster())))
@@ -729,7 +581,6 @@ class ConsumerGroupServiceTest {
         ConsumerGroupDescription consumerGroupDescription =
                 new ConsumerGroupDescription(null, true, null, null, null, GroupState.STABLE, null, null, null, null);
 
-        ConsumerGroupAsyncExecutor consumerGroupAsyncExecutor = mock(ConsumerGroupAsyncExecutor.class);
         when(applicationContext.getBean(
                         ConsumerGroupAsyncExecutor.class,
                         Qualifiers.byName(namespace.getMetadata().getCluster())))
@@ -751,7 +602,6 @@ class ConsumerGroupServiceTest {
 
         String groupId = "testGroup";
 
-        ConsumerGroupAsyncExecutor consumerGroupAsyncExecutor = mock(ConsumerGroupAsyncExecutor.class);
         when(applicationContext.getBean(
                         ConsumerGroupAsyncExecutor.class,
                         Qualifiers.byName(namespace.getMetadata().getCluster())))
@@ -771,7 +621,6 @@ class ConsumerGroupServiceTest {
                 .build();
         String groupId = "testGroup";
 
-        ConsumerGroupAsyncExecutor consumerGroupAsyncExecutor = mock(ConsumerGroupAsyncExecutor.class);
         when(applicationContext.getBean(
                         ConsumerGroupAsyncExecutor.class,
                         Qualifiers.byName(namespace.getMetadata().getCluster())))
